
public class Main {

}
//https://docs.google.com/document/d/1oi5XLrY79R7I8JhC74IQpLMWnCZqIC4ew-tfuvrwfE8/edit?usp=sharing