public class Path {

	public enum Mode {WALKING, HORSE, BOAT};
	int distance;
	
	
	
	
	
	
}
