@startuml

class Main{
    handleFindPath(Start, End, Methods, Cost)
}
class WindowFrame{
    Image
}
class Graph{
    findPath(Start, End, Methods, Cost)
}
class Node{
    int X, Y
    String Name
    Type
    draw()
}
class Path{
    int Distance
    AcceptableMethods[]
    Node0
    Node1
    Line
    draw()
}

Main -> WindowFrame
Main -> Graph
Graph -> "*" Node
Node -> "*" Path
WindowFrame ..> Node
WindowFrame ..> Path
@enduml
